--- a/app/src/main/res/layout/blog_page_list.xml
+++ b/app/src/main/res/layout/blog_page_list.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
+        app:tabRippleColor="@null"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <androidx.viewpager2.widget.ViewPager2
