--- a/app/src/main/res/layout/blog_list_item.xml
+++ b/app/src/main/res/layout/blog_list_item.xml
@@ -2,43 +2,90 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingHorizontal="15dp"
+    android:paddingVertical="10dp">
 
     <TextView
         android:id="@+id/blog_list_item_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/FF333333"
+        android:textSize="20sp"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/blog_list_item_desc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLines="2"
+        android:paddingVertical="5dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/blog_list_item_title" />
+
+    <ImageView
+        android:id="@+id/clicks_icon"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:contentDescription="@null"
+        android:src="@drawable/clicks_icon"
+        app:layout_constraintBottom_toBottomOf="@+id/blog_list_item_clicks"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/blog_list_item_clicks"
+        app:layout_constraintVertical_bias="0.5" />
 
     <TextView
         android:id="@+id/blog_list_item_clicks"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingStart="2dp"
+        android:paddingEnd="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/clicks_icon"
         app:layout_constraintTop_toBottomOf="@+id/blog_list_item_desc" />
+
+    <ImageView
+        android:id="@+id/likes_icon"
+        android:layout_width="17dp"
+        android:layout_height="17dp"
+        android:contentDescription="@null"
+        android:src="@drawable/likes_icon"
+        app:layout_constraintBottom_toBottomOf="@+id/blog_list_item_likes"
+        app:layout_constraintLeft_toRightOf="@+id/blog_list_item_clicks"
+        app:layout_constraintTop_toTopOf="@+id/blog_list_item_likes"
+        app:layout_constraintVertical_bias="0.5" />
 
     <TextView
         android:id="@+id/blog_list_item_likes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingStart="2dp"
+        android:paddingEnd="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/blog_list_item_clicks"
+        app:layout_constraintLeft_toRightOf="@+id/likes_icon"
         app:layout_constraintTop_toBottomOf="@+id/blog_list_item_desc" />
+
+    <ImageView
+        android:id="@+id/time_icon"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:contentDescription="@null"
+        android:src="@drawable/time_icon"
+        app:layout_constraintBottom_toBottomOf="@+id/blog_list_item_post_time"
+        app:layout_constraintLeft_toRightOf="@+id/blog_list_item_likes"
+        app:layout_constraintTop_toTopOf="@+id/blog_list_item_post_time"
+        app:layout_constraintVertical_bias="0.5" />
 
     <TextView
         android:id="@+id/blog_list_item_post_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:paddingStart="2dp"
+        android:paddingEnd="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/blog_list_item_likes"
+        app:layout_constraintLeft_toRightOf="@+id/time_icon"
         app:layout_constraintTop_toBottomOf="@+id/blog_list_item_desc" />
 
     <TextView
