--- a/app/src/main/res/layout/blog_list.xml
+++ b/app/src/main/res/layout/blog_list.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingVertical="5dp">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/home_list_view"
