--- a/app/src/main/res/layout/blog_list_item.xml
+++ b/app/src/main/res/layout/blog_list_item.xml
@@ -3,6 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginVertical="5dp"
+    android:background="@color/white"
     android:paddingHorizontal="15dp"
     android:paddingVertical="10dp">
 
