--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -24,17 +24,15 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.5" />
 
-        <com.google.android.material.imageview.ShapeableImageView
+        <com.saoke.joyreader.ui.AvatarView
             android:id="@+id/avatar"
             android:layout_width="64dp"
             android:layout_height="64dp"
             android:layout_marginEnd="10dp"
-            android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/avatar_arrow"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.5"
-            app:shapeAppearance="@style/circle_image" />
+            app:layout_constraintVertical_bias="0.5" />
 
         <ImageView
             android:id="@+id/avatar_arrow"
@@ -110,7 +108,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
-            android:text="******"
+            android:text="@string/hidden_password"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/password_arrow"
             app:layout_constraintTop_toTopOf="parent"
