--- a/app/src/main/res/layout/activity_blog.xml
+++ b/app/src/main/res/layout/activity_blog.xml
@@ -8,7 +8,8 @@
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="10dp">
 
         <TextView
             android:id="@+id/content"
